# botanica

./: Cargo.toml  build.rs
assets/botanica/audio/music/: README
assets/botanica/fonts/monogram/: README
assets/botanica/ids/: tile.ids.ron
assets/botanica/locale/: en_us.locale.ron
assets/botanica/textures/creature/: player.aseprite  player_arm.aseprite  player_eyes.aseprite  player_right.aseprite
assets/botanica/textures/tile/: dirt.aseprite  full_grass.aseprite  grass.ase  missingno.aseprite
assets/botanica/textures/ui/: cursor.aseprite
assets/botanica/textures/ui/button/: button_down.ase  button_up.ase
assets/botanica/tile/: dirt.ron
assets/botanica/tiles/: dirt.tile.ron  grass.tile.ron
src/: asset.rs  client.rs  cursor.rs  env.rs  i18n.rs  identifier.rs  main.rs  physics.rs  player.rs  raw_id.rs  registry.rs  server.rs  util.rs  world.rs
src/asset/: image.rs  locale.rs  mod.rs  tile.rs
src/client/: mod.rs  networking.rs
src/creature/: mod.rs  player.rs
src/networking/: client.rs  debug.rs  error.rs  mod.rs  protocol.rs  server.rs
src/registry/: def.rs  error.rs  mod.rs  tile.rs
src/registry/tile/: mod.rs  settings.rs
src/save/: error.rs  format.rs  mod.rs
src/server/: mod.rs  networking.rs
src/state/: loading.rs
src/state/menu/: bevy_splash.rs  button.rs  mod.rs  server_select.rs  title_screen.rs  world_select.rs
src/tile/: bundle.rs  mod.rs
src/util/: math.rs  mod.rs  sanitize.rs  tilehub.rs
src/utils/: asset.rs  math.rs  mod.rs  sanitize.rs
