[package]
name = "botanica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
ron = "0.7"
anyhow = "1"
iyes_loopless = "0.6"
bevy_egui = "0.14"
renet = "0.0.8"
bevy_renet = "0.0.3"
futures = "0.3"

[features]
debug = []
fast_bevy_splash = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
