[package]
name = "botanica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
ron = "0.8.1"
anyhow = "1"
thiserror = "1"
bevy_egui = { version = "0.21", features = ["immutable_ctx"] }
renet = "0.0.13"
renet_visualizer = { version = "0.0.6", features = ["bevy"] }
bevy_renet = "0.0.9"
rsa = "0.9.2"
rand = "0.8"
futures = "0.3"
regex = "1"

[features]
debug = []
fast_bevy_splash = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
